2008-07-15 Roman
- FIX:/DAQ/BlockCalc: Field for go to block function is hide for empty function.
- /UI/VCAEngine, TElem, TValue: Storing objects' size is made optimal.


2008-07-13 Roman
- FIX:/DAQ/LogicLev: Mode list and Free stat is fixed.
- /UI/QTCfg, /UI/Vision: Save check dialog on exit and close window is changed.
- FIX:/UI/QTCfg: Apply at edited combo signal on item select is added.


2008-07-11 Roman
- !!:/UI/Vision: Resource cache support is added to development pages.
- FIX:/UI/Vision: Zero arguments list process for Text shape is fixed.
- FIX:/UI/Vision: Multiply opened of included widgets into shape box is fixed.
- /UI/Vision: Maximize include widgets to container box size is added.


2008-07-10 Roman
- FIX:/UI/Vision: Exit form included widgets edit is fixed.
- !!:/UI/Vision: Resource cache support is added to runtime.
- /UI/Vision: Work pages attributes moved to QT object's atributes store.
- !:/UI/Vision: Include widget's scroll area support is added.
- FIX:/UI/Vision: Maximize and full screen runtime window mode is fixed.
- FIX:/UI/Vision: Update widgets runtime mechanism is fixed.


2008-07-10 Maxim
- FIX:/UI/Vision: Development widget pattern is fixed.


2008-07-10 Maxim
- !:/UI/Vision: Protocol shape is moved to new individual data per widget store mechanism for primitive ElFigure.
- !:/UI/Vision: Copy function for primitive ElFigure is added.


2008-07-09 Roman:
- /UI/Vision: Full screen and maximize run window attributes moved to project.
- /UI/Vision: Attributes pgOpen, pgNoOpenProc, pgGrp and pgOpenSrc moved from box shape to project's pages.
- !:/UI/Vision: Protocol shape is moved to new individual data per widget store mechanism.


2008-07-08 Roman:
- FIX:/UI/Vision: Big images scroll position lost on development is fixed.
- !:/UI/Vision: Diagramm shape is moved to new individual data per widget store mechanism.
- /UI/Vision: Unselect included widgets on development at lost focus is disabled.


2008-07-05 Roman